[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyc3l"
dynamic = ["version"]
authors = [
  { name="Florian Dubath", email="florian@dubath.org" },
]
description = "ComChain API client library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "ecdsa",
  "web3",
  "eth_account==0.5.9",
  "requests",
  "minimock [test]",
]
[project.urls]
"Homepage" = "https://github.com/com-chain/pyc3l"
"Bug Tracker" = "https://github.com/com-chain/pyc3l/issues"

[tool.hatch.version]
source = "vcs"
path = "src/pyc3l/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pyc3l --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/pyc3l/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/doc",
]
